--- a/Taskfile.yaml
+++ b/Taskfile.yaml
@@ -1,9 +1,53 @@
 version: '3'
 
+vars:
+  IMAGE: ic-n/sx
+  TAG:
+    sh: echo $RANDOM | md5 | head -c 20
+
 tasks:
   build:
     cmds:
-      - go build -v -i main.go
+      - docker build -t {{.IMAGE}}:{{.TAG}} -f ./deploy/commitreveal.dockerfile .
+      - helm package deploy
+      - mv commitreveal-0.1.0.tgz ./build/commitreveal-0.1.0.tgz
+
+  uninstall:
+    cmds:
+      - helm uninstall commitreveal
+
+  deploy:
+    cmds:
+      - >
+        helm upgrade --install
+        -f deploy/values/default.yaml
+        --set image.repository="{{.IMAGE}}"
+        --set image.tag="{{.TAG}}"
+        commitreveal
+        build/commitreveal-0.1.0.tgz
+
+  logs:
+    cmds:
+      - kubectl --namespace default get pod {{.POD_NAME}}
+      - kubectl --namespace default describe pod {{.POD_NAME}}
+      - kubectl --namespace default logs {{.POD_NAME}}
+    vars:
+      POD_NAME:
+        sh: kubectl get pods --namespace default -l "app.kubernetes.io/name=commitreveal" -o jsonpath="{.items[0].metadata.name}"
+      CONTAINER_PORT:
+        sh: kubectl get pod --namespace default {{.POD_NAME}} -o jsonpath="{.spec.containers[0].ports[0].containerPort}"
+
+  port-forward:
+    cmds:
+      - cmd: echo "Visit http://127.0.0.1:8080 to use your application"
+        silent: true
+      - cmd: kubectl --namespace default port-forward {{.POD_NAME}} 8080:{{.CONTAINER_PORT}}
+    interactive: true
+    vars:
+      POD_NAME:
+        sh: kubectl get pods --namespace default -l "app.kubernetes.io/name=commitreveal" -o jsonpath="{.items[0].metadata.name}"
+      CONTAINER_PORT:
+        sh: kubectl get pod --namespace default {{.POD_NAME}} -o jsonpath="{.spec.containers[0].ports[0].containerPort}"
 
   clean:
     cmds:
