--- a/solution/deploy/values/default.yaml
+++ b/solution/deploy/values/default.yaml
@@ -1,3 +1,7 @@
+netURL: https://mainnet.infura.io  # https://ethereum.publicnode.com
+# privateKey: /var/...
+chainId: 1
+
 resources:
   limits:
     cpu: 200m
