--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -16,6 +16,9 @@ jobs:
       - uses: actions/checkout@v2
       - uses: bufbuild/buf-setup-action@v1
       - uses: bufbuild/buf-lint-action@v1
+      - name: Lint buf
+        run: buf lint proto
+        working-directory: ./solution
 
   test:
     runs-on: ubuntu-latest
